# kb_cls_grad

./: .gitignore  README.md  README_CN.md  main.py  manage_interp_kb.sh  pyproject.toml
app/algorithms/: classification.py  similarity.py
app/core/: config.py  constants.py  logging.py  regex_matcher.py  task_manager.py  utils.py  vectoring.py
app/processors/: csv_processor.py  excel_processor.py  file_processor.py  md_fix_processor.py  pdf_processor.py  txt_processor.py  word_processor.py
app/schemas/: knowledge_base.py
app/services/: classification_grading_feature_operate_service.py  data_element_batch_match_service.py  data_element_change_service.py  data_element_operate_service.py  data_recognition_service.py  file_recognition_service.py  health_check_service.py  health_monitor_service.py  interface_tracking_service.py  kafka_service.py  knowledge_postprocess_service copy.py  knowledge_postprocess_service.py  knowledge_preprocess_service.py  knowledge_size_service.py  standard_compared_deletion_service.py  vector_cleanup_service.py  vector_rebuild_service copy.py  vector_rebuild_service.py
interpretation_specification/config/: settings.py
interpretation_specification/db/: milvus_excel_grading.db
interpretation_specification/schemas/: spec_schema.py
interpretation_specification/scripts/: app.py  manage.sh
interpretation_specification/services/: data_element_batch_match_service.py  pre_stop_handler.py
scripts/: clean_milvus_non_leaf.py  copy_collection.py  manage.sh  milvus_connect.py  test_regex.py  vectorize_standard_data.py  watch_milvus.py
(+325 files in other folders)
