[project]
name = "kb-cls-grad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.2",
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.121.0",
    "jieba>=0.42.1",
    "kafka-python>=2.2.15",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pymilvus[milvus-lite]>=2.6.3",
    "python-multipart>=0.0.20",
    "rank-bm25>=0.2.2",
    "requests>=2.32.5",
    "setuptools<81",
    "uvicorn>=0.38.0",
    "watchfiles>=1.1.1",
    "rich==14.1.0",
    "tenacity==9.1.2",
]


[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true